--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,12 @@
       <li nz-menu-item>
         <span title><i class="anticon anticon-database"></i><span class="nav-text"><a routerLink="/databases">Database</a></span></span>
       </li>
-      <li nz-submenu>
-        <span title><i class="anticon anticon-team"></i><span class="nav-text">Team</span></span>
-        <ul>
-          <li nz-menu-item>Team 1</li>
-          <li nz-menu-item>Team 2</li>
-        </ul>
+      <li nz-menu-item>
+        <span title><i class="anticon anticon-database"></i><span class="nav-text"><a routerLink="/databases">Table</a></span></span>
       </li>
-      <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">File</span></span></li>
+      <li nz-menu-item>
+        <span title><i class="anticon anticon-database"></i><span class="nav-text"><a routerLink="/databases">Dashboard</a></span></span>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
