--- a/src/app/databases/databases.component.html
+++ b/src/app/databases/databases.component.html
@@ -1,4 +1,4 @@
-<nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
+<nz-table #nzTable [nzPageSize]="10">
   <thead nz-thead>
     <tr>
       <th nz-th><span>Id</span></th>
